Propagate sync event outcomes through auto sync tracking